tests/NormalTests/paczka1/fuzzy1/99419483.err
Error in line 3: sch05IZ3x3 A443 48,8
Error in line 17: Zl3y A443 92,7
Error in line 4: djQCoYLfO2 A246 13,3
